# aruco_detector

./: README.md
src/aruco_detector/: CMakeLists.txt  package.xml
src/aruco_detector/config/: aruco_detector.yaml  config.yaml  config_left.yaml  config_left_sim.yaml  config_right.yaml  config_right_sim.yaml  config_zed2i.yaml  config_zed2i_sim.yaml
src/aruco_detector/include/aruco_detector/: aruco_detector.hpp
src/aruco_detector/launch/: aruco_detector.launch.py  aruco_detector_seppia.launch.py  aruco_detector_seppia_left.launch.py  aruco_detector_seppia_left_sim.launch.py  aruco_detector_seppia_right.launch.py  aruco_detector_seppia_right_sim.launch.py  aruco_detector_seppia_zed2i.launch.py  aruco_detector_seppia_zed2i_sim.launch.py
src/aruco_detector/src/: aruco_detector_app.cpp
src/aruco_detector/src/aruco_detector/: ad_services.cpp  ad_subscriptions.cpp  ad_utils.cpp  aruco_detector.cpp  params.yaml
